[package]
name = "cw1155-impl"
version = "0.1.0"
authors = ["chinhnotional <eyescryptoinsights@gmail.com>"]
edition = "2021"
description = "Basic implementation of a CW-1155 compliant token"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-utils = "0.13.2"
cw2 = "0.13.2"
cw1155 = "0.13.2"
cw-storage-plus = "0.13.2"
cosmwasm-std = { version = "1.0.0-beta8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }